--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,10 @@ android {
         viewBinding true
     }
 }
-
+repositories {
+    google()
+    mavenCentral()
+}
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.4.0'
