--- a/TMSdk/build.gradle
+++ b/TMSdk/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     implementation 'com.blankj:utilcodex:1.31.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.10'
     implementation 'com.google.android.material:material:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
