--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,32 +1,25 @@
-name: Maven Central Repo Deployment1
+name: Publish package to the Maven Central Repository
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  release:
+    types: [created]
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Git Repo
-        uses: actions/checkout@v2
-      - name: cd TMSDK
-        run: |
-             cd TMSdk
-      - name: Set up Maven Central Repo
+      - uses: actions/checkout@v2
+      - name: Set up Java
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-          server-id: sonatype-nexus-staging
-          server-username: ${{ secrets.NEXUS_USERNAME }}
-          server-password: ${{ secrets.NEXUS_PASSWORD }}
-          gpg-passphrase:  ${{ secrets.GPG_PASSWORD }}
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: cd TMSDK
+        run: |
+          cd TMSdk
+      - name: Decode gpg
+        run: |
+          echo "${{ secrets.SIGNING_SECRET_KEY_RING_KEY }}" > ~/secring.gpg.b64
+          base64 -d ~/secring.gpg.b64 > ~/secring.gpg
       - name: Publish package
-        uses: gradle/gradle-build-action@4137be6a8bf7d7133955359dbd952c0ca73b1021
-        with:
-          arguments: publish
+        run: gradle publish -Psigning.keyId=${{ secrets.SIGNING_KEY_ID }} -Psigning.password=${{ secrets.SIGNING_PASSWORD }} -Psigning.secretKeyRingFile=$(echo  ~/secring.gpg)
         env:
-          username: ${{ secrets.NEXUS_USERNAME }}
-          password: ${{ secrets.NEXUS_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
