--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: cd TMSDK
+      - name: cd TMSdk
         run: |
           cd TMSdk
       - name: Decode gpg
