--- a/TMSdk/build.gradle
+++ b/TMSdk/build.gradle
@@ -52,8 +52,8 @@ afterEvaluate {
                 def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
                 url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
                 credentials {
-                    username System.getenv("NEXUS_USERNAME")
-                    password System.getenv("NEXUS_PASSWORD")
+                    username System.getenv("NEXUS_USERNAME") == null ? NEXUS_USERNAME : System.getenv("NEXUS_USERNAME")
+                    password System.getenv("NEXUS_PASSWORD") == null ? NEXUS_PASSWORD : System.getenv("NEXUS_PASSWORD")
                 }
             }
         }
