--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android:6.8.0'
-    implementation project(path: ':TMSdk')
+    implementation 'com.dounine:tmsdk:1.0.0'
+//    implementation project(path: ':TMSdk') //测试专用
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
