--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,8 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
-RELEASE_STORE_FILE=/Users/lake/dounine/github/tmsdk/debug.keystore
-RELEASE_STORE_PASSWORD=abc123
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-13.0.1.jdk/Contents/Home
+RELEASE_STORE_FILE=/Users/lake/dounine/github/tmsdk/release.keystore
+RELEASE_STORE_PASSWORD=lailake
 RELEASE_KEY_ALIAS=key0
-RELEASE_KEY_PASSWORD=abc123
+RELEASE_KEY_PASSWORD=lailake
