--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-13.0.1.jdk/Contents/Home
+#org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-13.0.1.jdk/Contents/Home
 RELEASE_STORE_FILE=/Users/lake/dounine/github/tmsdk/release.keystore
 RELEASE_STORE_PASSWORD=lailake
 RELEASE_KEY_ALIAS=key0
