--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,8 @@ android {
             }
         }
         debug {
-            debuggable false
-            jniDebuggable false
+            debuggable true
+            jniDebuggable true
             renderscriptDebuggable false
             minifyEnabled true
             zipAlignEnabled true
