为支付增加参数

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,6 @@
 //        jcenter() // Warning: this repository is going to shut down soon
 //    }
 //}
-rootProject.name = "My Application"
+rootProject.name = "ftx"
 include ':app'
 include ':TMSdk'
