动态更新版本

--- a/TMSdk/build.gradle
+++ b/TMSdk/build.gradle
@@ -93,10 +93,10 @@ android {
     }
 }
 
-repositories {
-    mavenCentral()
-    google()
-}
+//repositories {
+//    mavenCentral()
+//    google()
+//}
 
 
 dependencies {
